@@ -4635,6 +4635,8 @@ v0.33.20        10-Feb-2002
 
 	mbtask:
 		Removed some debug logging.
+		Creates the semafore is_inet when the internet connections is
+		available, and removes it when it is down.
 
 	mbcico:
 		Fixed binkp driver to accept incoming unprotected sessions.
